[bdist_wheel]
universal=1

[metadata]
description-file =
    README.rst

[bumpversion]
current_version = 0.0.1
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:deeptracy_core/__init__.py]

[flake8]
ignore = E999 # static typing errors
exclude = build,.git,.tox
max-line-length = 119
