[bumpversion]
current_version = 0.0.8
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description-file = 
	README.rst

[bumpversion:file:setup.py]

[bumpversion:file:deeptracy_core/__init__.py]

[flake8]
max-line-length = 119
statistics = true
count = true
show-source = true
exclude = .venv,.git,.tox,utils,docs,*lib/python*,*egg,cache,build
ignore = E126,F811,E712,F401,E999,F403

